# supersed

./: .gitignore  README.md  pyproject.toml  supersed.py
.github/workflows/: publish.yml
supersed/: supersed.py
test/: example.txt  example_1.txt
